--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "xrpl-token-scripts",
+  "name": "uniswap-v3-bot",
   "version": "1.0.0",
-  "description": "XRPL IOU issuance and DEX trading examples",
-  "main": "basic-example.ts",
+  "description": "Uniswap V3 trading bot",
+  "main": "uniswap-v3-bot.ts",
   "scripts": {
-    "start": "ts-node basic-example.ts"
+    "start": "ts-node uniswap-v3-bot.ts",
+    "start:xrpl": "ts-node basic-example.ts"
   },
   "dependencies": {
     "xrpl": "^2.14.0",
+    "@uniswap/sdk-core": "^4.0.0",
+    "@uniswap/v3-sdk": "^3.10.0",
+    "@uniswap/universal-router-sdk": "^2.0.0",
+    "ethers": "^5.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.0"
   }
